# reseller-test

./: .gitignore  Cargo.toml  metadata.json  package-lock.json  package.json
api/: reseller-test:universal.os-v1.wit
pkg/: manifest.json
reseller-test/: Cargo.toml
reseller-test/src/: function_signatures.rs  helpers.rs  http_handlers.rs  lib.rs  local_handlers.rs  structs.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  config.json  index.css  main.tsx
ui/src/abi/: ApiRegistry.json  Reseller.json
ui/src/components/: ApiKeyForm.tsx  DataKeyElement.tsx  ErrorMessage.tsx  EthereumConnect.tsx  InfoContainer.tsx  KimapExplorer.tsx  MessageForm.tsx  NodeElement.tsx  ResponseDisplay.tsx  TreeContainer.tsx
ui/src/kimap/: abis.ts  helpers.ts
ui/src/store/: reseller_test.ts
ui/src/types/: ResellerTest.ts
