[package]
name = "reseller-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
kinode_process_lib = { version = "0.10.2", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"
kinode_app_common = { git = "https://github.com/jaxs-ribs/kinode-async-macro", package = "kinode_app_common" }
proc_macro_send = { git = "https://github.com/jaxs-ribs/kinode-async-macro", package = "proc_macro_send" }
url = "2.2.0"
alloy-primitives = "0.8.15"
alloy-sol-types = { version = "0.8.15", features = ["json"] }
alloy-contract = "0.8.1"
dotenvy = "0.15.7"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
